--- a/JS_HigharcChallenge/package.json
+++ b/JS_HigharcChallenge/package.json
@@ -7,6 +7,7 @@
     "name": ""
   },
   "devDependencies": {
+    "express": "^4.18.2",
     "jest": "^29.2.1",
     "jest-editor-support": "^30.2.0"
   }
